--- a/vòng lặp while/tinh tong.html
+++ b/vòng lặp while/tinh tong.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<script>
+    let a = parseInt(prompt('nhap vao a'));
+    let total = 0;
+    total += a;
+    while (a != -1) {
+         a = parseInt(prompt('nhap vao a'))
+
+        alert(a)
+        total += a;
+
+        alert(total);
+    }
+</script>
 </body>
 </html>
